# term-gfx-rs

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs  state.rs
src/graphics/: camera.rs  light.rs  material.rs  mod.rs  sphere.rs  util.rs  viewport.rs  world.rs
src/graphics/canvas/: buffered_canvas.rs  mod.rs  test.rs
