[package]
name = "term-gfx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.19"
crossterm = "0.27.0"
nalgebra = "0.32.5"
bitflags = "2.5.0"
mouse_position = "0.1.4"
winapi = "0.3.9"
inputbot = "0.6.0"

[profile.dev]
# enable small amount of optimisation in debug
opt-level = 1